youtube video try

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" /> 
@@ -101,6 +101,9 @@
       <button class="btnn btn-1 btn-1e">придбати жупан</button>
     </div>  
       <a class="flag" href="http://madeinua.org/" target="_blank"></a>
+      <iframe frameborder="0" height="100%" width="100%"
+              src="https://youtube.com/embed/ZZELmbz7mBc?autoplay=1&controls=0&showinfo=0&autohide=1">
+      </iframe>
       <img src="pic.jpg" alt="" class="bgwidth" id="bg">
       <a href="#" class="arrow"></a>
     </div>
