youtube video try 2

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <iframe frameborder="0" height="100%" width="100%"
               src="https://youtube.com/embed/ZZELmbz7mBc?autoplay=1&controls=0&showinfo=0&autohide=1">
       </iframe>
-      <img src="pic.jpg" alt="" class="bgwidth" id="bg">
+      <!--<img src="pic.jpg" alt="" class="bgwidth" id="bg">-->
       <a href="#" class="arrow"></a>
     </div>
 
