--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>  
       <a class="flag" href="http://madeinua.org/" target="_blank"></a>
       <iframe frameborder="0" height="100%" width="100%"
-              src="https://youtube.com/embed/ZZELmbz7mBc?autoplay=1&controls=0&showinfo=0&autohide=1">
+              src="https://youtube.com/embed/ZZELmbz7mBc?autoplay=1&controls=0&showinfo=0&autohide=1" alt="" class="bgwidth" id="bg">
       </iframe>
       <!--<img src="pic.jpg" alt="" class="bgwidth" id="bg">-->
       <a href="#" class="arrow"></a>
