--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
     </div>  
 
     </div> -->
+      <iframe frameborder="0" height="100%" width="100%"
+              src="https://youtube.com/embed/ZZELmbz7mBc?autoplay=1&controls=0&showinfo=0&autohide=1" alt="" class="bgwidth" id="bg"></iframe>
     <div class="header">
       <div class="title-wrapper animated delay-three"> 
         <div class="social clearfix">
@@ -101,9 +103,7 @@
       <button class="btnn btn-1 btn-1e">придбати жупан</button>
     </div>  
       <a class="flag" href="http://madeinua.org/" target="_blank"></a>
-      <iframe frameborder="0" height="100%" width="100%"
-              src="https://youtube.com/embed/ZZELmbz7mBc?autoplay=1&controls=0&showinfo=0&autohide=1" alt="" class="bgwidth" id="bg">
-      </iframe>
+     
       <!--<img src="pic.jpg" alt="" class="bgwidth" id="bg">-->
       <a href="#" class="arrow"></a>
     </div>
