--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         document.write(VK.Share.button(false,{type: "round", text: "Поділитись жупаном", eng: 1}));
         --></script></div>
         </div>
-      <h2 id="brand">Університетський жупан</h2>
+      <h2 id="brand">Home from sky</h2>
       <ul class="title-list clearfix">
         <li>натхненний історією</li>
         <li>створений ентузіастами</li>
