--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
     <div class="header">
       <div class="title-wrapper animated delay-three"> 
         <div class="social clearfix">
-              <div class="fb"><div class="fb-share-button" data-href="http://stud-muffin.com.ua/" data-layout="button_count"></div></div>
+              <div class="fb"><div class="fb-share-button" data-href="http://yesanton.github.io/homefromsky/" data-layout="button_count"></div></div>
           <div class="vk"><script type="text/javascript"><!--
-        document.write(VK.Share.button(false,{type: "round", text: "Поділитись жупаном", eng: 1}));
+        document.write(VK.Share.button(false,{type: "round", text: "Tell the world", eng: 1}));
         --></script></div>
         </div>
       <h2 id="brand">Home from sky</h2>
       <ul class="title-list clearfix">
-        <li>натхненний історією</li>
-        <li>створений ентузіастами</li>
-        <li>втілений професіоналами</li>
+        <li>Technology that serves you </li>
+<!--        <li>створений ентузіастами</li>
+        <li>втілений професіоналами</li> -->
       </ul>
-      <button class="btnn btn-1 btn-1e">придбати жупан</button>
+      <button class="btnn btn-1 btn-1e">Know more</button>
     </div>  
       <a class="flag" href="http://madeinua.org/" target="_blank"></a>
         <img src="pic.jpg" alt="" class="bgwidth" id="bg">
