--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
         <div class="social clearfix">
               <div class="fb"><div class="fb-share-button" data-href="http://yesanton.github.io/homefromsky/" data-layout="button_count"></div></div>
           <div class="vk"><script type="text/javascript"><!--
-        document.write(VK.Share.button(false,{type: "round", text: "Tell the world", eng: 1}));
+        document.write(VK.Share.button(false,{type: "round", text: "Spread the world", eng: 1}));
         --></script></div>
         </div>
       <h2 id="brand">Home from sky</h2>
       <ul class="title-list clearfix">
-        <li>Technology that serves you </li>
+        <li>innovative Technology that rockets your promotion campaign</li>
 <!--        <li>створений ентузіастами</li>
         <li>втілений професіоналами</li> -->
       </ul>
       <button class="btnn btn-1 btn-1e">Know more</button>
     </div>  
-      <a class="flag" href="http://madeinua.org/" target="_blank"></a>
+      <a class="flag" href="http://www.dji.com/" target="_blank"></a>
         <img src="pic.jpg" alt="" class="bgwidth" id="bg">
       <a href="#" class="arrow"></a>
     </div>
