--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
       <h2 id="brand">Home from sky</h2>
       <ul class="title-list clearfix">
-        <li>innovative Technology that rockets your promotion campaign</li>
+        <li>innovative Technology to rocket your promotion campaign</li>
 <!--        <li>створений ентузіастами</li>
         <li>втілений професіоналами</li> -->
       </ul>
@@ -109,18 +109,38 @@
     <section class="about" >
       <div class="container">
 
-        <h2>stud muffin</h2>
-        <p>Не виявивши одягу, гідного носити символіку славетного університету Шевченка, двоє юнаків вирішили власноруч втілити їх бачення у життя. Так був створений одяг з університетською символікою, що викликає почуття гордості і бажання одягати його щодня. Клопітко підібрані кольори й матеріали, детально продумані символи і фасон, що поєднуються з неперевершеною історією - це і є наш жупан. Ми переконані, що соціальний статус студента - найліпший з усіх існуючих і атрибут, що його підкреслює, має бути не менш досконалим.  Наостанок ми залишили найпотужніший аргумент: бабусі Івана жупан дуже сподобався!</p>
+        <h2>Home from sky</h2>
+        <p>
+           The affordable advanced technologies are already today. Drones are used for delivery services, they are used for to provide internted access to distant regions, 
+           and they became an exciting hobby for many.
+
+        </p>
+        <p>
+            We connect people looking for additional, effective and affordable way to promote their ideas.
+             Those might want to get a nice real estate promotional photo and video, 
+            company event video or just to get a vivid video memories of a wedding from the sky. On the other hand we also provide an avenue for 
+            professionals and ethusiasts to sell their skills.
+        </p>
         <img src="granny.png" alt="" class="granny">
       </div>
     </section>
 
     <section class="history" data-parallax="scroll" data-image-src="image/history.jpg">
       <div class="container">
-      <h2>назад у минуле</h2>
-      <p>Перший жупан, як його називали тоді “letterman jacket” бере своє коріння з середини XIX століття в найпрестижнішому університеті світу - Університеті Гарварду. Йшов рік 1865-й. Гарвардська команда з бейсболу знайшла спосіб виділити зіркових гравців команди, - нагородити светром з нашитою літерою «H». </p>
-      <p>Одягати светр із літерою дозволялося лише найкращим. Сидиш на лаві запасних? Тренуєшся недостатньо? Віддай наприкінці сезону светр із чарівливою літерою! Магія діяла – вже через десятиліття футбольна команда Гарварду перейняла закоренілу традицію у бейсболістів. Чимдалі все більше команд та університетів підхоплювати традицію і вже до початку ХХ століття жупан поширився серед університетів всієї країни.</p>
-      <p>Наступні роки змінювався матеріал жупану: від вовняної основи з контрастними шкіряними рукавами з гордо виділеною літерою до бавовни і шовку. Однак завжди незмінним залишалося ставлення – жупан став беззаперечним символом авторитетності поважного закладу.</p>
+      <h2>The prospective</h2>
+      <p> Drones were once considered to be highly futuristic and their applications in business were thought to be very limited, however with the passage of time,
+           the true potential of drone technology is surfacing. These unmanned aircrafts can be used on a bigger scale and their applications are numerous.
+          One of the applications of these devices is for the marketing of residential and commercial properties. Drones completely alter the way
+          property marketing is done because of their ability to acquire video footage from angles that are otherwise not possible or extremely
+          expensive to get. These devices help marketers to get amazing aerial views of the property which is used for marketing purposes.
+          Such footage is a game changer. </p>
+      <p> In addition to marketing, drones can also be used for inspecting the property, for the purpose of insurance,
+           or for other business applications. Aerial pictures of a property are worth a lot when it comes
+           to marketing and drones can do that in a very cost-effective manner.</p>
+      <p>It is not just the aerial f how the property photography that can be done by a drone. Due to its small size, a drone can also move
+           from one room to another or from one unit to another, capturing the overall structure of the property. This video can be presented
+          to potential buyers to give them a very realistic view ois. The factor that makes drones
+           the perfect option for marketing purposes is their affordability. </p>
       <div class="last">
         <img class="h" src="img/h.png" alt="">
       </div>  
