--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             company event video or just to get a vivid video memories of a wedding from the sky. On the other hand we also provide an avenue for 
             professionals and ethusiasts to sell their skills.
         </p>
-        <img src="granny.png" alt="" class="granny">
+        <img src="quadcopter.png" alt="" class="granny">
       </div>
     </section>
 
