--- a/index.html
+++ b/index.html
@@ -152,25 +152,25 @@
           <div class="row animated faden">
               <div class="col-md-4">
                 <div class="number1"><h2 id="num1"></h2>
-                  <p>прототипи зроблено у Adobe Photoshop </p>
+                  <p>Orders made </p>
                 </div>
               </div>  
               <div class="col-md-4">
                 <div class="number2"><h2 id="num2"></h2>
-                  <p>одиниць вже виготовлено</p>
+                  <p>Clients </p>
                 </div>
               </div>  
               <div class="col-md-4">
                 <div class="number3"><h2 id="num3"></h2>
-                  <p>українських підприємств задіяні у виробництві</p></div>
+                  <p>Freedrolancers</p></div>
               </div>
             </div>
           </div>  
     </section>
     <section class="photos" id="buy">
       <div class="container">
-        <h2>Придбати</h2>
-        <p class="sizesLeft">Залишилось <span> 1 L</span>, 10 M, <span>1 S</span></p>
+        <h2>Sign up</h2>
+        <p class="sizesLeft">Sign up now and get <span> promotional </span> rates </p>
         <br>
         <div class="row">
           <div class="col-md-6">
@@ -220,37 +220,37 @@
 
             <div class="form-wrapper">
               <div class="price">
-                <p>Вартість - <span>785<span> ГРН</p>
+                <p>Sign up form</p>
               </div>
-              <p class="info">Заповніть, будь ласка, форму нижче. Після цього ми зв'яжемось з вами для підтвердження замовлення. </p>
+              <p class="info">Please, fill the form in order to become a member </p>
               <p class="np">доставка    </p>
-              <img src="img/np.png" alt="">
-              <p class="info">*оплата здійснюється безпосередньо у відділенні Нової Пошти.</p>
+             <!--<img src="img/np.png" alt="">
+              <p class="info">*оплата здійснюється безпосередньо у відділенні Нової Пошти.</p> -->
               <form method="post" id="order" action="https://docs.google.com/forms/d/1fZXB6unQek8VeQx7f-SRPzqmsGRRe7KJ00qwXbDb48M/formResponse" target="hidden_iframe" onsubmit="submitted=true;">
                    <div class="form-group">
-                  <label for="name">Ваше Ім'я</label>
-                    <input name="entry.850202998" type="text" class="form-control" id="name" placeholder="Ім'я Прізвище По батькові">
+                  <label for="name">Full name</label>
+                    <input name="entry.850202998" type="text" class="form-control" id="name" placeholder="First name and last name">
                   </div>
                  <div class="form-group">
-                  <label for="exampleInputEmail1">Адреса</label>
-                    <input  name="entry.1376362949" type="text" class="form-control" id="adress" placeholder="Місто, вулиця, будинок, індекс">
+                  <label for="exampleInputEmail1">Adress</label>
+                    <input  name="entry.1376362949" type="text" class="form-control" id="adress" placeholder="Country, City, Street, Building, post code">
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputEmail1">Мобільний телефон</label>
-                      <input  name="entry.1798511429" type="text" class="form-control" id="phone" placeholder="093 594 93 53">
+                    <label for="exampleInputEmail1">Mobile phone</label>
+                      <input  name="entry.1798511429" type="text" class="form-control" id="phone" placeholder="+38093 594 93 53">
                   </div>
                   <div class="form-group">
-                    <label for="size">Ваш розмір</label>
+                    <label for="size">Your role</label>
                     <select name="entry.1452495229" id="size">
-                      <option value="S">S</option>
-                      <option value="M">M</option>
-                      <option value="L">L</option>
+                      <option value="S">Drone professional</option>
+                      <option value="M">Customer</option>
+                      
                     </select>
 
                   </div>
 
-                  <button class="order btn btn-default">Замовити</button>
-                  <p class="delivery">* вартість доставки - 30грн.</p>
+                  <button class="order btn btn-default">Sigh up</button>
+                  <p class="delivery">* you agree on terms.</p>
                   
               </form>
               </div>
