--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta property="fb:app_id"    content="1412099195759698" />
     <meta property="og:title" content="Університетський жупан" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Stud Muffin" />
+    <meta property="og:description" content="Home from sky" />
     <meta property="og:image" content="http://i.piccy.info/i9/6da4354449c70f6466894ba741740912/1425485223/161631/878806/fb.jpg" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="title" content="Університетський жупан" />
-    <meta name="description" content="Бабуся рекомендує." />
+    <meta name="title" content="Home from sky" />
+    <meta name="description" content="Grandma recommends." />
     <link rel="image_src" href="http://i.piccy.info/i9/6da4354449c70f6466894ba741740912/1425485223/161631/878806/fb.jpg" />
-    <title>Stud Muffin</title>
+    <title>Home from sky</title>
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
 
@@ -223,7 +223,7 @@
                 <p>Sign up form</p>
               </div>
               <p class="info">Please, fill the form in order to become a member </p>
-              <p class="np">доставка    </p>
+              <!--<p class="np">Ашкд    </p>-->
              <!--<img src="img/np.png" alt="">
               <p class="info">*оплата здійснюється безпосередньо у відділенні Нової Пошти.</p> -->
               <form method="post" id="order" action="https://docs.google.com/forms/d/1fZXB6unQek8VeQx7f-SRPzqmsGRRe7KJ00qwXbDb48M/formResponse" target="hidden_iframe" onsubmit="submitted=true;">
@@ -263,15 +263,15 @@
       <div class="container"> 
       
         <img src="img/info.png" class="info centered" alt="zupan">
-        <p>Усі питання, пропозиції та відгуки відправляйте на нашу поштову скриньку - <strong>studmuffin.info@gmail.com</strong></p>
-        <p>Якщо ви хочете першими почути про наші новики та акції, створити з нами жупан для студентів вашого університету або просто запросити нас до себе на вечірку :-) - надішліть нам вашу електронну адресу та перейдіть по посиланню що прийде до вашої скриньки.</p>
+        <p>If you have any questions contact us by email - <strong>mazepa007@gmail.com</strong></p>
+        <p>If you want to be the first to hear about our new stuff, ocreate something together or just to invite us for a party :-), subscribe for our news.</p>
          <div id="mc_embed_signup">
           <form action="//stud-muffin.us10.list-manage.com/subscribe/post?u=2b25e55daff125eec55b548ae&amp;id=10c478658a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div id="mc_embed_signup_scroll">
            <h2></h2>
           <div class="indicates-required"><span class="asterisk"></span></div>
           <div class="mc-field-group">
-           <label for="mce-EMAIL">Ваша поштова скринька<span class="asterisk"></span>
+           <label for="mce-EMAIL">Your email<span class="asterisk"></span>
           </label>
            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
           </div>
@@ -280,7 +280,7 @@
             <div class="response" id="mce-success-response" style="display:none"></div>
            </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
               <div style="position: absolute; left: -5000px;"><input type="text" name="b_2b25e55daff125eec55b548ae_10c478658a" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="Надіслати" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
               </div>
           </form>
           </div>
@@ -296,14 +296,14 @@
           <div class="col-md-6">
             <div class="us_wrap">
               <a href="https://www.facebook.com/ivan.burlaka.1" target="_blank"><img src="img/ivan.jpg" class="centered" alt="">
-                <h4 class="names">Іван Бурлака</h4></a>
-              <p>Студент факультету кібернетики. Пече італійську піцу, варить найкращу каву, робить красиві фотографії та створює веб-додатки.</p>
+                <h4 class="names">Ivan Burlaka</h4></a>
+              <p>Student at Taras Shevchenko University. He bakes italian Pizza, cooks the beautiful pictures, brews best coffee and makes web applications.</p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="us_wrap desired-height">
-              <a href="https://www.facebook.com/yesanton.007" target="_blank"><img src="img/anton.jpg" class="centered" alt=""><h4 class="names">Антон Єщенко</h4></a>
-              <p>Студент факультету кібернетики. Походить з Великих Кобилячків. Знаходить максимальні коаліції у обмежених кооперативних іграх. У вільний час бігає по Голосієвському району, співає пісні та ошивається європейськими країнами.</p>
+              <a href="https://www.facebook.com/yesanton.007" target="_blank"><img src="img/anton.jpg" class="centered" alt=""><h4 class="names">Anton Yeshchenko</h4></a>
+              <p> Student at Tartu University. Comes from Great Kobelyachki. He finds maximal coalitions in restricted cooperative games. In free time he runs the hills, sings songs and hops European countries.</p>
             </div>
           </div>
         </div>
@@ -311,7 +311,7 @@
     </section>
 
     <footer>
-      <p>&copy; Stud Muffin 2015, designed  by <a href="">Ivan Burlaka</a></p>
+      <p>&copy; Home from Sky 2015, designed  by <a href="">Ivan Burlaka</a></p>
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
