--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
             <div class="form-wrapper">
               <div class="price">
-                <p>Sign up form</p>
+                <p>Sign up</p>
               </div>
               <p class="info">Please, fill the form in order to become a member </p>
               <!--<p class="np">Ашкд    </p>-->
@@ -291,7 +291,7 @@
     </section>
     <section class="about_us">
       <div class="container"> 
-        <h2>Хто ми?</h2>
+        <h2>Founders?</h2>
         <div class="row">
           <div class="col-md-6">
             <div class="us_wrap">
