--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon" /> 
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/favicon.png" type="image/x-icon" /> 
+<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="interkassa-verification" content="59f8d3d0c6403c2c9ad081d4c0ca5b36" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
