--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="img/favicon.png" type="image/x-icon" /> 
-<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" /> 
+<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8">
     <meta name="interkassa-verification" content="59f8d3d0c6403c2c9ad081d4c0ca5b36" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="fb:app_id"    content="1412099195759698" />
-    <meta property="og:title" content="Університетський жупан" />
+    <meta property="og:title" content="Home from sky" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Home from sky" />
     <meta property="og:image" content="http://i.piccy.info/i9/6da4354449c70f6466894ba741740912/1425485223/161631/878806/fb.jpg" />
